Final Notebook | Need to add filler text

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -3099,6 +3099,11 @@
  },
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Dependency Imports"
+  },
+  {
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
@@ -3120,10 +3125,6 @@
     "from collections import Counter\n",
     "from wordcloud import WordCloud\n",
     "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from langdetect import detect, LangDetectException\n",
-    "from tqdm import tqdm\n",
     "import torch\n",
     "from datasets import Dataset\n",
     "from transformers import (\n",
@@ -3133,8 +3134,7 @@
     "    Trainer,\n",
     ")\n",
     "from peft import LoraConfig, get_peft_model\n",
-    "from evaluate import load as load_metric\n",
-    "import os"
+    "from evaluate import load as load_metric"
    ],
    "metadata": {
     "id": "rUCKAlecDm4I",
@@ -3145,6 +3145,11 @@
    },
    "outputs": [],
    "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Checking if `Hardware Acceleration` is available"
   },
   {
    "cell_type": "code",
@@ -3191,6 +3196,11 @@
     }
    ],
    "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Loading the Dataset"
   },
   {
    "cell_type": "code",
@@ -3413,6 +3423,11 @@
    "execution_count": 6
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Data Cleanup"
+  },
+  {
    "cell_type": "code",
    "source": [
     "def clean_text_initial(text):\n",
@@ -3451,6 +3466,11 @@
    },
    "outputs": [],
    "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Data Viz"
   },
   {
    "cell_type": "code",
@@ -3574,6 +3594,11 @@
    "execution_count": 11
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Model Training"
+  },
+  {
    "cell_type": "code",
    "source": [
     "results = []"
@@ -3651,6 +3676,11 @@
     }
    ],
    "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Logistic Regression with TF-IDF"
   },
   {
    "cell_type": "code",
@@ -3739,6 +3769,11 @@
    "execution_count": 20
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Random Forest"
+  },
+  {
    "cell_type": "code",
    "source": [
     "print(\"\\nTraining Random Forest...\")\n",
@@ -3789,6 +3824,11 @@
     }
    ],
    "execution_count": 21
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### LSTM"
   },
   {
    "cell_type": "code",
@@ -3958,6 +3998,11 @@
     }
    ],
    "execution_count": 26
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### XLM RoBERTa"
   },
   {
    "cell_type": "code",
@@ -5029,6 +5074,11 @@
    "execution_count": 47
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Lightweight BERT"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-22T08:59:14.651858Z",
@@ -5380,6 +5430,11 @@
    "execution_count": 110
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Visualizing the Results"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-22T09:24:10.124386Z",
@@ -5601,7 +5656,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Testing"
+   "source": "# Testing"
   },
   {
    "metadata": {
@@ -5655,18 +5710,6 @@
    "source": "test_samples = json.loads(test_samples_json)",
    "outputs": [],
    "execution_count": 124
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-22T09:25:33.673215Z",
-     "start_time": "2025-06-22T09:25:33.670839Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "outputs": [],
-   "execution_count": null
   },
   {
    "metadata": {
